--- a/app/src/main/res/layout/view_pager_welcome_item.xml
+++ b/app/src/main/res/layout/view_pager_welcome_item.xml
@@ -16,14 +16,15 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/welcome_text"/>
+        app:layout_constraintBottom_toTopOf="@id/welcome_text"
+        android:contentDescription="@string/about_app_images_cd" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/welcome_text"
         style="@style/Theme.GymHelper.TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Text"
+        android:text="@string/app_name"
         android:textSize="24sp"
         android:textAlignment="center"
         android:layout_marginStart="28dp"
