--- a/app/src/main/res/layout/fragment_welcome_screen.xml
+++ b/app/src/main/res/layout/fragment_welcome_screen.xml
@@ -1,82 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/app_name"
         style="@style/Theme.GymHelper.TextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
         android:text="@string/welcome"
         android:textAlignment="center"
         android:textSize="30sp"
         android:textStyle="normal"
-        android:layout_marginTop="60dp"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/pager_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
         android:layout_marginTop="30dp"
+        android:layout_marginEnd="30dp"
         android:layout_marginBottom="24dp"
-        app:layout_constraintTop_toBottomOf="@id/app_name"
         app:layout_constraintBottom_toTopOf="@id/login_button"
-        >
+        app:layout_constraintTop_toBottomOf="@id/app_name">
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/welcome_image_pager"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/tabDots"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/tabDots"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabDots"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/welcome_image_pager"
             app:tabBackground="@drawable/tab_selector"
-            app:tabPadding="0dp"
             app:tabGravity="center"
             app:tabIndicatorHeight="0dp"
-            app:layout_constraintTop_toBottomOf="@id/welcome_image_pager"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:tabPadding="0dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/login_button"
         style="@style/Theme.GymHelper.Button"
-        android:backgroundTint="@null"
-        android:background="@drawable/button_gradient"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
-        android:text="@string/login"
-        android:layout_marginBottom="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/button_gradient"
+        android:backgroundTint="@null"
         android:foreground="?attr/selectableItemBackground"
-        app:layout_constraintTop_toBottomOf="@id/pager_layout"
-        app:layout_constraintBottom_toTopOf="@id/sigh_up_button"/>
+        android:text="@string/login"
+        app:layout_constraintBottom_toTopOf="@id/sigh_up_button"
+        app:layout_constraintTop_toBottomOf="@id/pager_layout" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/sigh_up_button"
         style="@style/Theme.GymHelper.Button"
-        android:backgroundTint="@null"
-        android:background="@drawable/button_gradient"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/sign_up"
         android:layout_marginHorizontal="24dp"
         android:layout_marginBottom="30dp"
+        android:background="@drawable/button_gradient"
+        android:backgroundTint="@null"
         android:foreground="?attr/selectableItemBackground"
-        app:layout_constraintTop_toBottomOf="@id/login_button"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:text="@string/sign_up"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/login_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
