--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -59,4 +59,11 @@
         <item name="cornerSizeBottomRight">0dp</item>
         <item name="cornerSizeBottomLeft">0dp</item>
     </style>
+
+    <style name="Theme.GymHelper.Toolbar" parent="ThemeOverlay.MaterialComponents.Toolbar.Primary">
+        <item name="textAllCaps">false</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/onPrimary</item>
+        <item name="font">@font/ubuntu_regular</item>
+    </style>
 </resources>
