--- a/app/src/main/res/layout/bottom_dialog_login.xml
+++ b/app/src/main/res/layout/bottom_dialog_login.xml
@@ -22,6 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
         android:layout_marginTop="32dp"
+        app:errorEnabled="true"
         app:layout_constraintTop_toBottomOf="@id/login_title">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -42,7 +43,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
+        app:errorEnabled="true"
         app:layout_constraintTop_toBottomOf="@id/email_input_layout"
         app:passwordToggleEnabled="true">
 
