--- a/app/src/main/res/layout/fragment_sign_up_screen.xml
+++ b/app/src/main/res/layout/fragment_sign_up_screen.xml
@@ -93,55 +93,55 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <EditText
-                android:id="@+id/age_text_field"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginTop="24dp"
-                android:background="@drawable/circle_edit_text"
-                android:fontFamily="@font/ubuntu_family"
-                android:hint="@string/age"
-                android:inputType="numberDecimal"
-                android:textAlignment="center"
-                android:textColor="@color/onPrimary"
-                android:textColorHint="@color/text_color_hint"
-                app:layout_constraintEnd_toStartOf="@id/height_text_field"
-                app:layout_constraintStart_toStartOf="@id/last_name_input_layout"
-                app:layout_constraintTop_toBottomOf="@id/last_name_input_layout"
-                android:importantForAutofill="no" />
+<!--            <EditText-->
+<!--                android:id="@+id/age_text_field"-->
+<!--                android:layout_width="100dp"-->
+<!--                android:layout_height="100dp"-->
+<!--                android:layout_marginTop="24dp"-->
+<!--                android:background="@drawable/circle_edit_text"-->
+<!--                android:fontFamily="@font/ubuntu_family"-->
+<!--                android:hint="@string/age"-->
+<!--                android:inputType="numberDecimal"-->
+<!--                android:textAlignment="center"-->
+<!--                android:textColor="@color/onPrimary"-->
+<!--                android:textColorHint="@color/text_color_hint"-->
+<!--                app:layout_constraintEnd_toStartOf="@id/height_text_field"-->
+<!--                app:layout_constraintStart_toStartOf="@id/last_name_input_layout"-->
+<!--                app:layout_constraintTop_toBottomOf="@id/last_name_input_layout"-->
+<!--                android:importantForAutofill="no" />-->
 
-            <EditText
-                android:id="@+id/height_text_field"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@drawable/circle_edit_text"
-                android:fontFamily="@font/ubuntu_family"
-                android:hint="@string/height"
-                android:inputType="numberDecimal"
-                android:textAlignment="center"
-                android:textColor="@color/onPrimary"
-                android:textColorHint="@color/text_color_hint"
-                app:layout_constraintEnd_toStartOf="@id/weight_text_field"
-                app:layout_constraintStart_toEndOf="@id/age_text_field"
-                app:layout_constraintTop_toTopOf="@id/age_text_field"
-                android:importantForAutofill="no" />
+<!--            <EditText-->
+<!--                android:id="@+id/height_text_field"-->
+<!--                android:layout_width="100dp"-->
+<!--                android:layout_height="100dp"-->
+<!--                android:background="@drawable/circle_edit_text"-->
+<!--                android:fontFamily="@font/ubuntu_family"-->
+<!--                android:hint="@string/height"-->
+<!--                android:inputType="numberDecimal"-->
+<!--                android:textAlignment="center"-->
+<!--                android:textColor="@color/onPrimary"-->
+<!--                android:textColorHint="@color/text_color_hint"-->
+<!--                app:layout_constraintEnd_toStartOf="@id/weight_text_field"-->
+<!--                app:layout_constraintStart_toEndOf="@id/age_text_field"-->
+<!--                app:layout_constraintTop_toTopOf="@id/age_text_field"-->
+<!--                android:importantForAutofill="no" />-->
 
-            <EditText
-                android:id="@+id/weight_text_field"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@drawable/circle_edit_text"
-                android:fontFamily="@font/ubuntu_family"
-                android:hint="@string/weight"
-                android:inputType="numberDecimal"
-                android:textAlignment="center"
-                android:textColor="@color/onPrimary"
-                android:textColorHint="@color/text_color_hint"
-                app:layout_constraintEnd_toEndOf="@id/last_name_input_layout"
-                app:layout_constraintStart_toEndOf="@id/height_text_field"
-                app:layout_constraintTop_toBottomOf="@id/last_name_input_layout"
-                app:layout_constraintTop_toTopOf="@id/age_text_field"
-                android:importantForAutofill="no" />
+<!--            <EditText-->
+<!--                android:id="@+id/weight_text_field"-->
+<!--                android:layout_width="100dp"-->
+<!--                android:layout_height="100dp"-->
+<!--                android:background="@drawable/circle_edit_text"-->
+<!--                android:fontFamily="@font/ubuntu_family"-->
+<!--                android:hint="@string/weight"-->
+<!--                android:inputType="numberDecimal"-->
+<!--                android:textAlignment="center"-->
+<!--                android:textColor="@color/onPrimary"-->
+<!--                android:textColorHint="@color/text_color_hint"-->
+<!--                app:layout_constraintEnd_toEndOf="@id/last_name_input_layout"-->
+<!--                app:layout_constraintStart_toEndOf="@id/height_text_field"-->
+<!--                app:layout_constraintTop_toBottomOf="@id/last_name_input_layout"-->
+<!--                app:layout_constraintTop_toTopOf="@id/age_text_field"-->
+<!--                android:importantForAutofill="no" />-->
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/email_input_layout"
@@ -150,7 +150,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="24dp"
                 android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@id/age_text_field">
+                app:layout_constraintTop_toBottomOf="@id/last_name_input_layout">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/email_text_field"
