--- a/app/src/main/res/layout/bottom_dialog_login.xml
+++ b/app/src/main/res/layout/bottom_dialog_login.xml
@@ -86,4 +86,19 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/forgot_a_password" />
 
+    <ProgressBar
+        android:id="@+id/calendarPb"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:indeterminate="true"
+        android:visibility="gone"
+        android:indeterminateDrawable="@drawable/progress_rotating_gradient"
+        app:indicatorSize="50dp"
+        android:padding="12dp"
+        android:background="@drawable/rounded_progress_background"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
