--- a/app/src/main/res/drawable/tab_indicator_selected.xml
+++ b/app/src/main/res/drawable/tab_indicator_selected.xml
@@ -5,5 +5,5 @@
     android:shape="ring"
     android:thickness="4dp"
     android:useLevel="false">
-    <solid android:color="@color/onPrimary"/>
+    <solid android:color="@color/primary"/>
 </shape>
