--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -18,7 +18,7 @@
 
     <style name="Theme.GymHelper.TextView" parent="Widget.MaterialComponents.TextView">
         <item name="font">@font/ubuntu_light</item>
-        <item name="android:textColor">@color/onPrimary</item>
+        <item name="android:textColor">@color/primary</item>
     </style>
 
     <style name="Theme.GymHelper.Button" parent="Widget.MaterialComponents.Button">
@@ -35,10 +35,12 @@
         <item name="boxCornerRadiusBottomStart">50dp</item>
         <item name="boxCornerRadiusTopEnd">50dp</item>
         <item name="boxCornerRadiusTopStart">50dp</item>
-        <item name="android:textColor">@color/onPrimary</item>
+        <item name="android:textColor">@color/primary</item>
         <item name="font">@font/ubuntu_light</item>
-        <item name="hintTextColor">@color/onPrimary</item>
+        <item name="hintTextColor">@color/primary</item>
         <item name="android:paddingTop">12dp</item>
+        <item name="android:textCursorDrawable">@null</item>
+        <item name="android:textColorPrimary">@color/primary</item>
         <!-- The color of the label in all other text field states (such as resting and disabled) -->
         <item name="android:textColorHint">@color/text_color_hint</item>
         <item name="boxStrokeColor">@color/selector_stroke_color</item>
@@ -59,6 +61,13 @@
         <item name="cornerSizeTopLeft">50dp</item>
         <item name="cornerSizeBottomRight">0dp</item>
         <item name="cornerSizeBottomLeft">0dp</item>
+    </style>
+
+    <style name="Theme.GymHelper.Toolbar" parent="ThemeOverlay.MaterialComponents.Toolbar.Primary">
+        <item name="textAllCaps">false</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/primary</item>
+        <item name="font">@font/ubuntu_regular</item>
     </style>
 
 </resources>
