--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -15,6 +15,12 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"/>
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/login_button"
+            android:text="@string/logout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
     </LinearLayout>
 
     <ProgressBar
