--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,6 +15,12 @@
         <item name="bottomSheetDialogTheme">@style/KollektivBottomSheetDialogTheme</item>
     </style>
 
+    <style name="Theme.MySplash" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/primary</item>
+        <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_launcher</item>
+        <item name="postSplashScreenTheme">@style/Theme.GymHelper</item>
+    </style>
+
     <style name="Theme.GymHelper.TextView" parent="Widget.MaterialComponents.TextView">
         <item name="font">@font/ubuntu_light</item>
         <item name="android:textColor">@color/primary</item>
@@ -66,5 +72,10 @@
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/primary</item>
         <item name="font">@font/ubuntu_regular</item>
+    </style>
+
+    <style name="Theme.GymHelper.SplashScreen" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash_gradient</item>
+        <item name="android:navigationBarColor">@color/secondary</item>
     </style>
 </resources>
