--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -9,6 +9,13 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <ImageView
+
+            android:id="@+id/image_test"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:contentDescription="@string/test" />
+
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/email_text_view"
             android:layout_width="wrap_content"
