--- a/app/src/main/res/layout/fragment_sign_up_screen.xml
+++ b/app/src/main/res/layout/fragment_sign_up_screen.xml
@@ -27,6 +27,29 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/profile_image"
+                android:layout_width="174dp"
+                android:layout_height="174dp"
+                android:layout_marginTop="34dp"
+                android:src="@color/surface"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/add_a_photo_text"
+                style="@style/Theme.GymHelper.TextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/add_a_photo"
+                android:textColor="@color/onSurface"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="@id/profile_image"
+                app:layout_constraintEnd_toEndOf="@id/profile_image"
+                app:layout_constraintStart_toStartOf="@id/profile_image"
+                app:layout_constraintTop_toTopOf="@id/profile_image" />
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/first_name_input_layout"
                 style="@style/Theme.GymHelper.TextLayout"
@@ -34,7 +57,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="24dp"
                 android:layout_marginTop="16dp"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toBottomOf="@id/profile_image">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/first_name_text_field"
