--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,8 @@
     <color name="onBackground">#FF314453</color>
     <color name="onSurface">#FF314453</color>
 
+    <color name="splash_icon_tint">#B2B2B2</color>
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
