--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -11,12 +11,14 @@
         <action
             android:id="@+id/action_welcomeFragment_to_signUpFragment"
             app:destination="@id/signUpFragment"
-            app:enterAnim="@android:anim/fade_in"
-            app:exitAnim="@android:anim/fade_out"
-            app:popEnterAnim="@android:anim/fade_in"
-            app:popExitAnim="@android:anim/fade_out" />
+            app:enterAnim="@anim/slide_in_left"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_right"
+            app:popExitAnim="@anim/slide_out_right"/>
         <action
             android:id="@+id/action_welcomeFragment_to_dashboardFragment"
+            app:enterAnim="@anim/from_bottom"
+            app:exitAnim="@anim/to_top"
             app:destination="@id/dashboardFragment" />
     </fragment>
     <fragment
@@ -25,6 +27,8 @@
         android:label="SignUpFragment" >
         <action
             android:id="@+id/action_signUpFragment_to_dashboardFragment"
+            app:enterAnim="@anim/from_bottom"
+            app:exitAnim="@anim/to_top"
             app:destination="@id/dashboardFragment" />
     </fragment>
     <fragment
@@ -33,6 +37,8 @@
         android:label="DashboardFragment" >
         <action
             android:id="@+id/action_dashboardFragment_to_welcomeFragment"
+            app:enterAnim="@anim/from_top"
+            app:exitAnim="@anim/to_bottom"
             app:destination="@id/welcomeFragment" />
     </fragment>
 </navigation>
