--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -17,9 +17,11 @@
             app:popExitAnim="@anim/slide_out_right"/>
         <action
             android:id="@+id/action_welcomeFragment_to_dashboardFragment"
+            app:destination="@id/dashboardFragment"
             app:enterAnim="@anim/from_bottom"
             app:exitAnim="@anim/to_top"
-            app:destination="@id/dashboardFragment" />
+            app:popUpTo="@id/welcomeFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/signUpFragment"
@@ -27,9 +29,11 @@
         android:label="SignUpFragment" >
         <action
             android:id="@+id/action_signUpFragment_to_dashboardFragment"
+            app:destination="@id/dashboardFragment"
             app:enterAnim="@anim/from_bottom"
             app:exitAnim="@anim/to_top"
-            app:destination="@id/dashboardFragment" />
+            app:popUpTo="@id/signUpFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/dashboardFragment"
@@ -37,8 +41,10 @@
         android:label="DashboardFragment" >
         <action
             android:id="@+id/action_dashboardFragment_to_welcomeFragment"
+            app:destination="@id/welcomeFragment"
             app:enterAnim="@anim/from_top"
             app:exitAnim="@anim/to_bottom"
-            app:destination="@id/welcomeFragment" />
+            app:popUpTo="@id/dashboardFragment"
+            app:popUpToInclusive="true" />
     </fragment>
 </navigation>
