Apply style to bottom app bar

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            app:background="@drawable/half_rounded_bottom_app_bar"
             app:labelVisibilityMode="labeled"
             app:navigationIconTint="@color/ic_home_menu_selector"
             app:fabAlignmentMode="end"
