--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -4,31 +4,16 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <ImageView
-
-            android:id="@+id/image_test"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:contentDescription="@string/test" />
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/email_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"/>
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/login_button"
-            android:text="@string/logout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-    </LinearLayout>
+    <com.instabug.library.ui.custom.CircularImageView
+        android:transitionName="profileImage"
+        android:id="@+id/profile_image"
+        android:src="@drawable/ic_upload"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <ProgressBar
         android:id="@+id/progress_bar"
