Add fab button menu

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -87,7 +87,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
-                android:fontFamily="@font/ubuntu_bold"
+                android:fontFamily="@font/ubuntu_light"
                 android:text="@string/body"
                 android:textColor="@color/primary"
                 android:textSize="18sp"
@@ -131,7 +131,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
-                android:fontFamily="@font/ubuntu_bold"
+                android:fontFamily="@font/ubuntu_light"
                 android:text="@string/personal_best"
                 android:textColor="@color/primary"
                 android:textSize="18sp"
@@ -175,7 +175,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
-                android:fontFamily="@font/ubuntu_bold"
+                android:fontFamily="@font/ubuntu_light"
                 android:text="@string/exercises"
                 android:textColor="@color/primary"
                 android:textSize="18sp"
@@ -219,7 +219,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
-                android:fontFamily="@font/ubuntu_bold"
+                android:fontFamily="@font/ubuntu_light"
                 android:text="@string/settings"
                 android:textColor="@color/primary"
                 android:textSize="18sp"
@@ -246,15 +246,28 @@
         style="@style/Theme.GymHelper.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
         android:layout_marginBottom="24dp"
         android:background="@drawable/button_gradient"
         android:backgroundTint="@null"
         android:foreground="?attr/selectableItemBackground"
+        android:drawableStart="@drawable/ic_baseline_exit_to_app_24"
         android:paddingHorizontal="48dp"
         android:text="@string/sign_out"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@id/profile_buttons_container"
-        app:layout_constraintTop_toBottomOf="@id/profile_buttons_container" />
+        app:layout_constraintStart_toStartOf="@id/profile_buttons_container" />
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:indeterminate="true"
+        android:indeterminateDrawable="@drawable/progress_rotating_gradient"
+        app:indicatorSize="50dp"
+        android:visibility="gone"
+        android:background="@drawable/rounded_progress_background"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
