--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/wrapper"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="100dp"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <com.google.android.material.bottomappbar.BottomAppBar
@@ -49,6 +49,87 @@
             app:layout_anchor="@id/bottom_app_bar" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_training"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/primary"
+        android:contentDescription="@string/float_button"
+        android:src="@drawable/ic_baseline_event_24"
+        android:visibility="gone"
+        android:layout_marginEnd="44dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@id/wrapper"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/add_training"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/ubuntu_light"
+        android:textSize="16sp"
+        android:visibility="gone"
+        android:textColor="@color/primary"
+        android:text="@string/add_training"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintTop_toTopOf="@id/fab_training"
+        app:layout_constraintBottom_toBottomOf="@id/fab_training"
+        app:layout_constraintEnd_toStartOf="@id/fab_training"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_exercise_set"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/primary"
+        android:visibility="gone"
+        android:contentDescription="@string/float_button"
+        android:src="@drawable/ic_baseline_fitness_center_24"
+        android:layout_marginEnd="44dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@id/fab_training"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/add_exercise_set"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/ubuntu_light"
+        android:visibility="gone"
+        android:textSize="16sp"
+        android:textColor="@color/primary"
+        android:text="@string/add_exercise_set"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintTop_toTopOf="@id/fab_exercise_set"
+        app:layout_constraintBottom_toBottomOf="@id/fab_exercise_set"
+        app:layout_constraintEnd_toStartOf="@id/fab_exercise_set"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_personal_best"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/primary"
+        android:contentDescription="@string/float_button"
+        android:visibility="gone"
+        android:src="@drawable/ic_trophy"
+        android:layout_marginEnd="44dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@id/fab_exercise_set"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/add_personal_best"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/ubuntu_light"
+        android:visibility="gone"
+        android:textSize="16sp"
+        android:textColor="@color/primary"
+        android:text="@string/add_personal_best"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintTop_toTopOf="@id/fab_personal_best"
+        app:layout_constraintBottom_toBottomOf="@id/fab_personal_best"
+        app:layout_constraintEnd_toStartOf="@id/fab_personal_best"/>
 
     <fragment
         android:id="@+id/fragment"
