Fix ripple effect

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -247,10 +247,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
-        android:background="@drawable/button_gradient"
+        android:background="@drawable/gradient_button_riple"
         android:backgroundTint="@null"
-        android:foreground="?attr/selectableItemBackground"
-        android:drawableStart="@drawable/ic_baseline_exit_to_app_24"
+        app:icon="@drawable/ic_baseline_exit_to_app_24"
+        android:gravity="center"
         android:paddingHorizontal="48dp"
         android:text="@string/sign_out"
         app:layout_constraintBottom_toBottomOf="parent"
